fix overflow to clip

--- a/client/static/css/index.css
+++ b/client/static/css/index.css
@@ -301,7 +301,7 @@ body{
   background-position: center center;
   position: sticky;
   top: 0;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 .home-intro--scroll-message{
